--- a/pages/crispr.html
+++ b/pages/crispr.html
@@ -94,7 +94,7 @@
                     <section class="section-container">
                          <h2 class="list-header">Science</h2>
                          <p class="profiles">
-                              Exa-cel is their lead program for SCD and Beta Thalassemia. This works by extracting the patient,s stem cells and 
+                              Exa-cel is their lead program for SCD and Beta Thalassemia. This works by extracting the patient's stem cells and 
                               editing them to flip the genetic switch back to making Fetal Hemoglobin. They treat the patients with Busulfan
                               to get rid of all the old stem cells. Then they treat them with the new edited stem cells. It is a long and extensive
                               process. This has very strong data at producing high levels 
@@ -102,7 +102,7 @@
                          </p>
                          <p class="profiles">
                               CTX-110 is their first CAR-T therapy for CD19. It is an allogeneic therapy where they take donor T cells and 
-                              edit them before giving them to a patient. These cell don't have any advanced edits, and the data has been
+                              edit them before giving them to a patient. These cells don't have any advanced edits, and the data has been
                               very weak compared to other allogeneic CAR-T programs.
                          </p>
                          <p class="profiles">
