--- a/pages/crispr.html
+++ b/pages/crispr.html
@@ -174,12 +174,12 @@
                                </a>
                          </p>
                          <p class="profiles">
-                              <a href="<p class="profiles">
                               <a href="http://ir.crisprtx.com/news-releases/news-release-details/crispr-therapeutics-presents-positive-results-its-phase-1">
                                CTX-110 Phase 1 Data
                                </a>
+                         </p>
                     </section> 
-                    <p>&#42 These are my Opinions and Estimates. They should not be considered financial advice.</p>
+                    <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
           </main>
