--- a/pages/crispr.html
+++ b/pages/crispr.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">CRISPR Therapeutics</h1>
 
@@ -141,7 +142,7 @@
                               opt for this kind of implant. I give it no value until the data proves it works.              
                          </p>
                          <p class="profiles">
-                              All in that is a $5.4 billion market cap. Based on the 78 million shares outstanding, that comes to $69.23. 
+                              All in, that is a $5.4 billion market cap. Based on the 78 million shares outstanding, that comes to $69.23. 
                          </p>
                     </section>  
 
