--- a/pages/crispr.html
+++ b/pages/crispr.html
@@ -55,7 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
                <h1 class="company-name">CRISPR Therapeutics</h1>
 
@@ -104,11 +104,12 @@
                          <p class="profiles">
                               CTX-110 is their first CAR-T therapy for CD19. It is an allogeneic therapy where they take donor T cells and 
                               edit them before giving them to a patient. These cells don't have any advanced edits, and the data has been
-                              very weak compared to other allogeneic CAR-T programs.
+                              very weak compared to other allogeneic CAR-T programs. They have 67% ORR with only 28% responding at 6 months.
                          </p>
                          <p class="profiles">
-                              CTX-130 is their second CAR-T therapy. It is an allogeneic therapy focused on CD70. This still lacks the key 
-                              edits and the data is still on par with other allogeneic programs. This is being developed for solid tumors.
+                              CTX-130 is their second CAR-T therapy. It is an allogeneic therapy focused on CD70 in T cell Lymphomas. 
+                              They showed 70% ORR rate and 27% responding at 6 months. This still lacks the key 
+                              edits and the data is still on par with other allogeneic programs.
                          </p>
                          <p class="profiles">
                               VCTX-210 is their Diabetes therapy they are working on with ViaCyte. This program works on creating islet cells 
