--- a/pages/crispr.html
+++ b/pages/crispr.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/13/2023</p>
 
-               <h1 class="company-name">CRISPR Therapeutics</h1>
+               <h1 class="company-name"><a href="https://crisprtx.com/">CRISPR Therapeutics</a></h1>
 
                <div  class="company-layout">
 
