--- a/pages/kymera.html
+++ b/pages/kymera.html
@@ -36,6 +36,9 @@
                               <a href="../pages/companies.html">Companies</a>
                          </li>
                          <li class="nav-item">
+                              <a href="../investing/investing.html">Investing</a>
+                         </li>
+                         <li class="nav-item">
                               <a href="../pages/science.html">Science</a>
                          </li>
                          <li class="nav-item">
