--- a/learning/crispr.html
+++ b/learning/crispr.html
@@ -519,6 +519,8 @@
                     
                     </section>
 
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
+
                </div>
 
           </main>
