--- a/learning/crispr.html
+++ b/learning/crispr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>CRISPR</title>
+          <title>Learn About CRISPR Gene Editing</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
