--- a/learning/crispr.html
+++ b/learning/crispr.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="CRISPR, CAS9, CAS12, CAS13, CASX, CAS14, MAD7 Base Editing, Prime Editing">
+          <meta name="description" content="Learn about types of CRISPR systems like CAS9, CAS12, CAS13, CASX, CAS14, MAD7 Base Editing,  and Prime Editing">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
