--- a/learning/crispr.html
+++ b/learning/crispr.html
@@ -7,7 +7,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about types of CRISPR systems like CAS9, CAS12, CAS13, CASX, CAS14, MAD7 Base Editing,  and Prime Editing">
           <meta name="author" content="CoderKid2k">
-
+          <link rel="icon" type="image/x-icon" href="../images/B2KFav.png">
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
