--- a/companies/crispr.html
+++ b/companies/crispr.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>CRISPR Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of CRISPR Therapeutics in CRISPR gene editing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -88,22 +94,13 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   Exa-cel SCD<progress class="progress-bar" value="80" max="100"></progress>
-                                   FDA submitted
-                              </p>
-                              <p class="profiles">
-                                   CTX-110 CD19<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   CTX-130 CD70<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   VCTX-210 Diabetes<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
+                                   I have followed Sam Kulkarni since 2018. I owned this for a long time, but I started to feel like they were 
+                                   singularly focused on CTX-001 and had stopped innovating for a few years. Now that they are approaching 
+                                   commercial launch, they have shifted focus back to clinical development. So far they are not showing 
+                                   anything new compared to peers. I am still waiting for them to get back to leading the science and not 
+                                   following the pack.
                               </p>
                          </section> 
                          
