--- a/learning/biochemistry.html
+++ b/learning/biochemistry.html
@@ -167,7 +167,7 @@
                          <p>
                               Fatty acids come in a few different kinds. The first is saturated fats. With saturated fat, there 
                               are no double bonds in the carbon chain. Saturated fats are the bad fats. They are fully saturated with hydrogens. The second is the 
-                              unsaturated fat. This has at least one double bond in the carbon chain. Unsatruated fats come from plants, 
+                              unsaturated fat. This has at least one double bond in the carbon chain. Unsaturated fats come from plants, 
                               oils, nuts and seeds. They are called the good fats. A polyunsaturated fat has 
                               more than one double bond. All essential fats are polyunsaturated.
                          </p>
