--- a/companies/crispr.html
+++ b/companies/crispr.html
@@ -160,6 +160,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    Exa-cel Awaiting FDA PDUFA date
@@ -191,6 +198,19 @@
                                    <a href="http://ir.crisprtx.com/news-releases/news-release-details/crispr-therapeutics-presents-positive-results-its-phase-1">
                                    CTX-110 Phase 1 Data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="http://ir.crisprtx.com/news-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="http://ir.crisprtx.com/events" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="http://ir.crisprtx.com/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
