--- a/companies/crispr.html
+++ b/companies/crispr.html
@@ -215,7 +215,10 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Companies Page</a> <a href="intellia.html">&lt;Previous</a> <a href="verve.html">Next&gt;</a>
+                         <a href="companies.html">Companies Page</a>
+                    </div>
+                    <div class="back-companies">
+                         <a href="intellia.html">&lt;Previous</a> <a href="verve.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
