--- a/companies/crispr.html
+++ b/companies/crispr.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/13/2023</p>
+                    <p class="updated">Last Updated 2/21/2023</p>
 
                     <h1 class="company-name"><a href="https://crisprtx.com/">CRISPR Therapeutics</a></h1>
 
@@ -95,8 +95,10 @@
                                    CRISPR is one of the original CRISPR CAS9 companies. They use the original CAS9 enzyme to do gene editing.
                                    Due to the possible risks of using a double stranded break in a person, they have focused on using the technology 
                                    for editing cells outside of humans like stem cell and T cell therapies. They are the most advanced company in 
-                                   the CRISPR space. Their lead drug for SCD has been submitted for commercial approval. They recently started 
-                                   to advance some early new programs around in-vivo gene knockout.
+                                   the CRISPR space. Their lead drug is CTX-001 for SCD has been submitted for commercial approval in Europe and will 
+                                   be submitted by end of Q1 2023 in the US. They recently started to advance a broad pipeline of CAR-T cell therapies 
+                                   using CRISPR gene editing. Their early data isn't very impressive, but there is always room for them to imporve their edits.
+                                   They anticipate to move forward their first in-vivo knock out progam for ANGPLT3 for cholesterol. 
                          </section>  
 
                          <section class="section-container">
@@ -104,9 +106,11 @@
                               <p class="profiles">
                                    I have followed Sam Kulkarni since 2018. I owned this for a long time, but I started to feel like they were 
                                    singularly focused on CTX-001 and had stopped innovating for a few years. Now that they are approaching 
-                                   commercial launch, they have shifted focus back to clinical development. So far they are not showing 
-                                   anything new compared to peers. I am still waiting for them to get back to leading the science and not 
-                                   following the pack.
+                                   commercial launch, they have shifted focus back to clinical development. They are working on multiple programs 
+                                   for CAR-T which could always improve the data with newer edits. They are improving the SCD program by progressing 
+                                   toward better conditioning. They are moving forward with hypoimmune beta cells for diabetes. They are also looking to advance 
+                                   their fist in-vivo knock out program. Things are starting to pick up so it seems like the old CRISPR Therapeutics is 
+                                   coming back.
                               </p>
                          </section> 
                          
@@ -117,7 +121,8 @@
                                    editing them to flip the genetic switch back to making Fetal Hemoglobin. They treat the patients with Busulfan
                                    to get rid of all the old stem cells. Then they treat them with the new edited stem cells. It is a long and extensive
                                    process. This has very strong data at producing high levels 
-                                   of Fetal Hemoglobin and eliminating Vaso Occlusive Crisis. This therapy has been submitted for FDA approval.
+                                   of Fetal Hemoglobin and eliminating Vaso Occlusive Crisis. This therapy will be submitted for FDA approval soon. They 
+                                   are also progressing with new conditioning with CD117.
                               </p>
                               <p class="profiles">
                                    CTX-110 is their first CAR-T therapy for CD19. It is an allogeneic therapy where they take donor T cells and 
@@ -125,21 +130,29 @@
                                    very weak compared to other allogeneic CAR-T programs. They have 67% ORR with only 28% responding at 6 months.
                               </p>
                               <p class="profiles">
+                                   CTX-112 is their second generation CD19 CAR-T therapy which includes their new Regnase-1 and TGF-BetaR2 edits
+                                   which are designed to increase potency of the CAR-T cells. They should be enrolling these in phase 1 soon.
+                              </p>
+                              <p class="profiles">
                                    CTX-130 is their second CAR-T therapy. It is an allogeneic therapy focused on CD70 in T cell Lymphomas. 
-                                   They showed 70% ORR rate and 27% responding at 6 months. This still lacks the key 
+                                   They showed 70% ORR rate and 27% responding at 6 months. This still lacks the key immune evading
                                    edits and the data is still on par with other allogeneic programs.
                               </p>
                               <p class="profiles">
-                                   VCTX-210 is their Diabetes therapy they are working on with ViaCyte. This program works on creating islet cells 
-                                   from stem cell sources and placing them in a capsule that is inserted inside the body. This has some challenges 
-                                   as the encapsulated islet cells have a hard time responding to insulin. 
+                                   CTX-131 is their second generation CD70 CAR-T therapy which includes their new Regnase-1 and TGF-BetaR2 edits
+                                   which are designed to increase potency of the CAR-T cells. They should be enrolling these in phase 1 soon.
+                              </p>
+                              <p class="profiles">
+                                   VCTX-211 is their Diabetes therapy they are working on with Vertex. This is the second generation of the islet cells 
+                                   program. I believe these cells have fitness edits, but they still lack the immune evasion edits and will still need 
+                                   the capsule to implant them.. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $1.9 billion
+                                   Cash $1868 million
                               </p>
                               <p class="profiles">
                                    Exa-cel is shared with Vertex with CRISPR getting only 40% of the revenues. I think they could do about 1,000 doses 
@@ -152,39 +165,77 @@
                                    not see this making much money if any at all. I gave it a $0 value.
                               </p>
                               <p class="profiles">
+                                   CTX-112 is in the space of CD19 which is very competitive. They don't have any data on this program yet, but it 
+                                   include the Regnase-1 and TGFBR2 edits that are supposed to improve potency. If they are successful, this could produce 
+                                   $250 million or more in revenues depending on data. I would give that a .1 multiplier since it has no clinical data. 
+                                   That gives it a value of $25 million.
+                              </p>
+                              <p class="profiles">
                                    CTX-130 is in the space of CD70. I would guess this could have a patient population of at least 10,000. It would 
                                    depend on the data on how much market share. I would think this could be worth $1 billion revenues if successful.
                                    I would give this a .5 multiplier as it has some phase 1 data. That would make it worth $500 million in value.
                               </p>
                               <p class="profiles">
-                                   VCTX-210 is their islet cells for Diabetes. I don't think this will work. Even if it does, I doubt many would 
-                                   opt for this kind of implant. I give it no value until the data proves it works.              
+                                   CTX-131 is in the space of CD70. They don't have any data on this program yet, but it 
+                                   include the Regnase-1 and TGFBR2 edits that are supposed to improve potency. If they are successful, this could produce 
+                                   $1 billion or more in revenues depending on data. I would give that a .1 multiplier since it has no clinical data. 
+                                   That gives it a value of $100 million. I would think this replaces CTX-130 revenues and is net neutral.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $5.4 billion market cap. Based on the 78 million shares outstanding, that comes to $69.23. 
+                                   VCTX-211 is their islet cells for Diabetes. If they can get this to work. I think they could do at least $2 billion in 
+                                   sales for diabetes. CRISPR would only get 50% of those sales for $1 billion. I think the number of patients
+                                   that would qualify for such a therapy would be only a small fraction 
+                                   of those with a need for it. I give this a multiplier of .1 which gives it a value of $100 million              
+                              </p>
+                              <p class="profiles">
+                                   All in, that is a $5.493 billion market cap. Based on the 78.6 million shares outstanding, that comes to $69.88. 
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Vertex Partnership for CTX-001 in SCD and Beta Thalassemia which they get 40% of sales. 
+                              </p>
+                              <p class="profiles">
+                                   Vertex Partnership through ViaCyte for Diabetes which they get 50% of sales. 
+                              </p>
+                              <p class="profiles">
+                                   Vertex Partnership for CF, DMD and DM1 with 50% of the sales 
+                              </p>
+                              <p class="profiles">
+                                   Nkarta to develop NK cells with 50% of sales.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   Exa-cel Awaiting FDA PDUFA date
+                                   Exa-cel Submitted in Europe
                               </p>
                               <p class="profiles">
-                                   CTX-110 Should be planning for phase 2
+                                   Exa-cel On track for US BLA by end of Q1 2023
                               </p>
                               <p class="profiles">
-                                   CTX-130 Enrolling phase 1
+                                   Phase 3 in pediatric patients continue to enroll
                               </p>
                               <p class="profiles">
-                                   VCTX-210 Enrolling phase 1
+                                   CTX-110 Enrollment and Dosing ongoing
+                              </p>
+                              <p class="profiles">
+                                   CTX-112 Initiating phase 1/2
+                              </p>
+                              <p class="profiles">
+                                   CTX-130 Enrollnment and Dosing ongoing
+                              </p>
+                              <p class="profiles">
+                                   CTX-131 Initiating phase 1/2
+                              </p>
+                              <p class="profiles">
+                                   VCTX-211 Enrollment and Dosing ongoing
+                              </p>
+                              <p class="profiles">
+                                   CTX-310 Planned to move into clinic this year
                               </p>
                          </section> 
 
@@ -202,7 +253,7 @@
                               </p>
                               <p class="profiles">
                                    <a href="http://ir.crisprtx.com/news-releases/news-release-details/crispr-therapeutics-presents-positive-results-its-phase-1">
-                                   CTX-110 Phase 1 Data
+                                   CTX-130 Phase 1 Data
                                    </a>
                               </p>
                          </section> 
