--- a/companies/crispr.html
+++ b/companies/crispr.html
@@ -95,10 +95,10 @@
                                    CRISPR is one of the original CRISPR CAS9 companies. They use the original CAS9 enzyme to do gene editing.
                                    Due to the possible risks of using a double stranded break in a person, they have focused on using the technology 
                                    for editing cells outside of humans like stem cell and T cell therapies. They are the most advanced company in 
-                                   the CRISPR space. Their lead drug is CTX-001 for SCD has been submitted for commercial approval in Europe and will 
-                                   be submitted by end of Q1 2023 in the US. They recently started to advance a broad pipeline of CAR-T cell therapies 
-                                   using CRISPR gene editing. Their early data isn't very impressive, but there is always room for them to imporve their edits.
-                                   They anticipate to move forward their first in-vivo knock out progam for ANGPLT3 for cholesterol. 
+                                   the CRISPR space. Their lead drug CTX-001 for SCD has been submitted for commercial approval in Europe and will 
+                                   be submitted by end the of Q1 2023 in the US. They recently started to advance a broad pipeline of CAR-T cell therapies 
+                                   using CRISPR gene editing. Their early data isn't very impressive, but there is always room for them to improve their edits.
+                                   They anticipate to move forward their first in-vivo knockout program for ANGPLT3 for cholesterol. 
                          </section>  
 
                          <section class="section-container">
@@ -166,7 +166,7 @@
                               </p>
                               <p class="profiles">
                                    CTX-112 is in the space of CD19 which is very competitive. They don't have any data on this program yet, but it 
-                                   include the Regnase-1 and TGFBR2 edits that are supposed to improve potency. If they are successful, this could produce 
+                                   includes the Regnase-1 and TGFBR2 edits that are supposed to improve potency. If they are successful, this could produce 
                                    $250 million or more in revenues depending on data. I would give that a .1 multiplier since it has no clinical data. 
                                    That gives it a value of $25 million.
                               </p>
@@ -177,7 +177,7 @@
                               </p>
                               <p class="profiles">
                                    CTX-131 is in the space of CD70. They don't have any data on this program yet, but it 
-                                   include the Regnase-1 and TGFBR2 edits that are supposed to improve potency. If they are successful, this could produce 
+                                   includes the Regnase-1 and TGFBR2 edits that are supposed to improve potency. If they are successful, this could produce 
                                    $1 billion or more in revenues depending on data. I would give that a .1 multiplier since it has no clinical data. 
                                    That gives it a value of $100 million. I would think this replaces CTX-130 revenues and is net neutral.
                               </p>
@@ -226,7 +226,7 @@
                                    CTX-112 Initiating phase 1/2
                               </p>
                               <p class="profiles">
-                                   CTX-130 Enrollnment and Dosing ongoing
+                                   CTX-130 Enrollment and Dosing ongoing
                               </p>
                               <p class="profiles">
                                    CTX-131 Initiating phase 1/2
