--- a/companies/crispr.html
+++ b/companies/crispr.html
@@ -242,8 +242,8 @@
                          <section class="section-container">
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
-                                   <a href="http://ir.crisprtx.com/news-releases/news-release-details/vertex-and-crispr-therapeutics-present-american-society">
-                                   Exa-cel ASH presentations
+                                   <a href="http://ir.crisprtx.com/static-files/0bdd16b9-d12f-4f51-9fe1-4fd69e4d4851">
+                                   Exa-cel EHA Presentation
                                    </a>
                               </p>
                               <p class="profiles">
